@@ -809,13 +809,13 @@ closedown(input)
       target_name = input->in_file_name;
       input_fd = fileno (input->fp);
       output_fd = fileno (output_file.fp);
-      copy_acl (input->in_file_name, input_fd,
-		input->out_file_name, output_fd,
-		input->st.st_mode);
 #ifdef HAVE_FCHOWN
       if (fchown (output_fd, input->st.st_uid, input->st.st_gid) == -1)
         fchown (output_fd, -1, input->st.st_gid);
 #endif
+      copy_acl (input->in_file_name, input_fd,
+		input->out_file_name, output_fd,
+		input->st.st_mode);
 
       ck_fclose (input->fp);
       ck_fclose (output_file.fp);
